################################################################################
# Skout - a Be-style panel for TDE                                             #
# Copyright (C) 2023 Mavridis Philippe <mavridisf@gmail.com>                   #
#                                                                              #
# Improvements and feedback are welcome!                                       #
# This software is licensed under the terms of the GNU GPL v3 license.         #
################################################################################

INSTALL(
  FILES iconify.png maximize.png close.png pindown.png pinup.png
  DESTINATION ${DATA_INSTALL_DIR}/skout/pics
)